Add library-scoped NativeInvocationPermission checks at native invocation boundaries #118